--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ name = "mobile-app-desktop"
 path = "gen/bin/desktop.rs"
 
 [dependencies]
+substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
 mobile-entry-point = "0.1.1"
 bevy = "0.3.0"
+openssl = { version = "0.10.32", features = ["vendored"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-glue = "0.2.1"
