--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,19 @@ mobile-entry-point = "0.1.1"
 bevy = "0.3.0"
 openssl = { version = "0.10.32", features = ["vendored"] }
 
+hex-literal = "0.3.1"
+codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
+
+substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
+sp-keyring = { git = "https://github.com/paritytech/substrate.git" }
+
+
+[dependencies.system]
+git = "https://github.com/paritytech/substrate.git"
+branch = "master"
+package = "frame-system"
+optional = true
+
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-glue = "0.2.1"
 
