--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git"
 mobile-entry-point = "0.1.1"
 bevy = "0.3.0"
 openssl = { version = "0.10.32", features = ["vendored"] }
-
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_json = "1.0.64"
+env_logger = "0.8.4"
 hex-literal = "0.3.1"
 codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
 
