--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,13 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = "1.0.64"
 env_logger = "0.8.4"
 hex-literal = "0.3.1"
+sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "master"}
+sp-runtime = {git = "https://github.com/paritytech/substrate.git", branch = "master"}
 codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
 
-substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
-sp-keyring = { git = "https://github.com/paritytech/substrate.git" }
-
+[dev-dependencies.clap]
+version = "2.33"
+features = ["yaml"]
 
 [dependencies.system]
 git = "https://github.com/paritytech/substrate.git"
